--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -6,8 +6,7 @@ import CardRelated from "@/components/ui/cards/CardRelated.astro";
 import Bookmark from "@/components/ui/buttons/Bookmark.astro";
 import SocialShare from "@/components/ui/buttons/SocialShare.astro";
 import PostFeedback from "@/components/ui/feedback/PostFeedback.astro";
-import { Image } from "astro:assets";
-import { capitalize, formatDate } from "@/utils/utils";
+import { formatDate, capitalize } from "@/utils/utils";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 import { SITE } from "@/data_files/constants";
@@ -20,16 +19,15 @@ export async function getStaticPaths() {
     props: { post },
   }));
 }
-// Get the current post's data
+
+// Get the current post's data and render the post's content
 const { post } = Astro.props;
+const { Content } = await post.render();
 
 // Get all blog posts
 const blogPosts: CollectionEntry<"blog">[] = await getCollection("blog");
 
 // Filter out the current post to get related posts
-// Note: This is a very basic way of choosing related posts, just for the purpose of the example.
-// In a production site, you might want to implement a more robust algorithm, choosing related posts based on tags, categories, dates, authors, or keywords.
-// See example: https://blog.codybrunner.com/2024/adding-related-articles-with-astro-content-collections/
 const relatedPosts: CollectionEntry<"blog">[] = blogPosts.filter(
   (blogEntry) => blogEntry.slug !== post.slug
 );
@@ -38,38 +36,22 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
 
 ---
 
-<MainLayout
-  title={pageTitle}
->
+<MainLayout title={pageTitle}>
   <section class="mx-auto max-w-3xl px-4 pb-12 pt-6 sm:px-6 lg:px-8 lg:pt-10">
     <div class="max-w-2xl">
       <div class="mb-6 flex items-center justify-between">
-        <div class="flex w-full gap-x-5 sm:items-center sm:gap-x-3">
-          <AvatarBlogLarge blogEntry={post} />
-          <div class="grow">
-            <div class="flex items-center justify-between gap-x-2">
-              <div>
-                <div
-                  class="hs-tooltip inline-block [--placement:bottom] [--trigger:hover]"
-                >
-                  <!--Post metadata and author info-->
-                  <span
-                    class="font-bold text-neutral-700 dark:text-neutral-300"
-                  >
-                    {post.data.author}
-                  </span>
-                </div>
+        <AvatarBlogLarge blogEntry={post} />
+        <div class="grow">
+          <div class="flex items-center justify-between gap-x-2">
+            <div>
+              <div class="hs-tooltip inline-block [--placement:bottom] [--trigger:hover]">
+                <!--Post metadata and author info-->
+                <span class="font-bold text-neutral-700 dark:text-neutral-300">
+                  {post.data.author}
+                </span>
                 <ul class="text-xs text-neutral-500">
-                  <li
-                    class="relative inline-block pe-6 before:absolute before:end-2 before:top-1/2 before:size-1 before:-translate-y-1/2 before:rounded-full before:bg-neutral-300 last:pe-0 last-of-type:before:hidden dark:text-neutral-400 dark:before:bg-neutral-600"
-                  >
-                    {formatDate(post.data.pubDate)}
-                  </li>
-                  <li
-                    class="relative inline-block pe-6 before:absolute before:end-2 before:top-1/2 before:size-1 before:-translate-y-1/2 before:rounded-full before:bg-neutral-300 last:pe-0 last-of-type:before:hidden dark:text-neutral-400 dark:before:bg-neutral-600"
-                  >
-                    {post.data.readTime} min read
-                  </li>
+                  <li>{formatDate(post.data.pubDate)}</li>
+                  <li>{post.data.readTime} min read</li>
                 </ul>
               </div>
             </div>
@@ -77,83 +59,85 @@ const pageTitle: string = `${post.data.title} | ${SITE.title}`;
         </div>
       </div>
       <!--Blog post title-->
-      <h2
-        class="mb-3 text-2xl font-bold text-neutral-800 dark:text-neutral-200 md:text-3xl"
-      >
+      <h1 class="mb-3 text-2xl font-bold text-neutral-800 dark:text-neutral-200 md:text-3xl">
         {post.data.title}
-      </h2>
-      <!--Blog post contents-->
-      <div class="mb-5 space-y-5 md:mb-8 md:space-y-8">
-        {
-          post.data.contents.map((content: string, index: any) =>
-            index === 1 ? (
-              <>
-                <p class="text-pretty text-lg text-neutral-700 dark:text-neutral-300">
-                  {content}
-                </p>
-                <Image
-                  class="w-full rounded-xl object-cover"
-                  src={post.data.cardImage}
-                  alt={post.data.cardImageAlt}
-                  draggable={"false"}
-                  format={"avif"}
-                />
-              </>
-            ) : (
-              <p class="text-pretty text-lg text-neutral-700 dark:text-neutral-300">
-                {content}
-              </p>
-            )
-          )
-        }
-      </div>
-      <div
-        class="mx-auto grid max-w-screen-lg gap-y-5 sm:flex sm:items-center sm:justify-between sm:gap-y-0"
-      >
+      </h1>
+      <!--Blog post contents rendered using post.render()-->
+      <article class="text-pretty text-lg text-neutral-700 dark:text-neutral-300">
+        <Content />
+      </article>
+      <div>
         <!--Blog post tags-->
-        <div
-          class="flex flex-wrap gap-x-2 gap-y-1 sm:flex-nowrap sm:items-center sm:gap-y-0"
-        >
-          {
-            post.data.tags?.map((tag: string, index) => (
-              <span class="inline-flex items-center gap-x-1.5 rounded-lg bg-neutral-400/30 px-3 py-1.5 text-xs font-medium text-neutral-700 outline-none focus:outline-none focus-visible:outline-none focus-visible:ring dark:bg-neutral-700/60 dark:text-neutral-300">
-                {capitalize(tag)}
-              </span>
-            ))
-          }
+        <div class="flex flex-wrap gap-x-2 gap-y-1">
+          {post.data.tags?.map((tag: string) => (
+            <span class="inline-flex items-center gap-x-1.5 rounded-lg bg-neutral-400/30 px-3 py-1.5 text-xs font-medium text-neutral-700 outline-none focus:outline-none focus-visible:outline-none focus-visible:ring dark:bg-neutral-700/60 dark:text-neutral-300">
+              {capitalize(tag)}
+            </span>
+          ))}
         </div>
         <!--Bookmark and Share buttons-->
         <div class="flex items-center justify-end gap-x-1.5">
           <Bookmark />
-          <div
-            class="mx-3 block h-4 border-e border-neutral-400 dark:border-neutral-500"
-          >
-          </div>
-          <div class="inline-flex">
-            <SocialShare pageTitle={post.data.title} />
-          </div>
+          <div class="mx-3 block h-4 border-e border-neutral-400 dark:border-neutral-500"></div>
+          <SocialShare pageTitle={pageTitle} />
         </div>
       </div>
     </div>
-    <PostFeedback
-      title="Was this post helpful?"
-      firstChoice="Yes"
-      secondChoice="No"
-    />
+    <PostFeedback title="Was this post helpful?" firstChoice="Yes" secondChoice="No" />
   </section>
 
   <!--Related articles section-->
   <section class="mx-auto max-w-3xl px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
-    <div class="mb-10 max-w-2xl">
-      <h2
-        class="text-balance text-2xl font-bold text-neutral-800 dark:text-neutral-200 md:text-4xl md:leading-tight"
-      >
-        Related articles
-      </h2>
-    </div>
-
+    <h2 class="mb-10 text-2xl font-bold text-neutral-800 dark:text-neutral-200 md:text-4xl md:leading-tight">
+      Related articles
+    </h2>
     <div class="grid grid-cols-2 gap-6">
       {relatedPosts.map((entry) => <CardRelated blogEntry={entry} />)}
     </div>
   </section>
 </MainLayout>
+
+<style is:global>
+  :root {
+    --transition-cubic: cubic-bezier(0.165, 0.84, 0.44, 1);
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  article h2,
+  article h3,
+  article h4,
+  article h5,
+  article h6 {
+    font-weight: bold;
+    margin-top: 2.5rem;
+    scroll-margin-top: 3rem;
+  }
+
+  h1 {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  h4 {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  p {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+</style>
